--- a/.env
+++ b/.env
@@ -6,4 +6,4 @@ DB_PASSWORD=alpaca_password
 
 ALPACA_API_KEY=PKO26EKTEI26ZH7RGY20
 ALPACA_SECRET_KEY=KEudA132FZu8Oels80z8fhhmNqg6LZ54AtOyPe27
-ALPACA_BASE_URL=https://paper-api.alpaca.markets
+ALPACA_BASE_URL=https://paper-api.alpaca.markets/v2
